--- a/WEAPONLICENSEREQUEST/package.json
+++ b/WEAPONLICENSEREQUEST/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "witnessform",
+  "name": "weaponlicenserequest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "moment": "^2.30.1",
-    "primereact": "^10.7.0",
+    "primereact": "^10.8.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1"
